fix: add Android 9 compatibility fallback